tests/snapshots/examples_fixtures/flow__base_directives_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_directives_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E012]: Unknown Module Member

Module `Flow` has no member named `print`.

  examples/flow/base_directives_ok.flx:8:1
  |
8 | Flow.print("len(xs) = " + to_string(len(xs)));
  | ^^^^^^^^^^

Hint:
  Check the module's public members or import the correct module.


error[E012]: Unknown Module Member

Module `Flow` has no member named `print`.

  examples/flow/base_directives_ok.flx:9:1
  |
9 | Flow.print("first(xs) = " + to_string(first(xs)));
  | ^^^^^^^^^^

Hint:
  Check the module's public members or import the correct module.

Found 2 errors.
== stdout ==
<not executed>
